Mejoro el comando jk para que no deje huella en el history

--- a/barreiros/css/main.css
+++ b/barreiros/css/main.css
@@ -9,3 +9,11 @@
     --b_low: #444444;
     --b_inv: #000000;
 }
+
+header, #hidebtn {
+    display: none !important
+}
+
+.CodeMirror {
+    font-size: 16px;
+}
